syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

service Post {
  rpc GetPostInfo (PostLookupModel) returns (PostModel) {}
}


message PostLookupModel {
  int32 postId = 1;
}

message PostModel {
  string description = 1;
  string domain = 2;
  string date = 3;
}
